legg til foto fiks cards arkeologi

--- a/content/tema/arkeologi/index.mdx
+++ b/content/tema/arkeologi/index.mdx
@@ -89,13 +89,27 @@ i vårt museumsdistrikt.
 
 <Cards id="historier" title="Historier om arkeologi" className="full pt-10 md:pt-20">
   <Card 
-    title="Myklebustskipet" 
-    description="Les mer om den storslåtte skipsgraven fra vikingtid funnet på gården Myklebust" 
-    image="/images/arkeologi/B2978_Myklebustmannen.jpg" 
-    imageAlt="" 
-    href="https://tohundrefortellinger.w.uib.no/1874/10/04/1874-myklebustskipet/" 
+    title="Unimusportalen – et arkeologisk skattekammer!" 
+    description="På Unimusportalen kan du finne alle de arkeologiske gjenstandene vi har i samlingene" 
+    image="/images/arkeologi/B5392_gullgubbe_red.jpg" 
+    imageAlt="Liten firkantet brikke i gull med to skikkelser trykt på platen" 
+    href="https://www.unimus.no/portal/#/things/fa8a886f-d634-442a-9d07-54f508ba8165" 
   />
   <Card 
+    title="Topografisk arkiv!" 
+    description="I dette arkivet finnes all dokumentasjon som hører til museets arkeologiske samling" 
+    image="/images/arkeologi/Hattebergskatten_red.jpg" 
+    imageAlt="Stor nål med ring på toppen." 
+    href="https://www.uib.no/samlingsforvaltning/113292/topografisk-arkiv" 
+  />
+  <Card 
+    title="Myklebustskipet" 
+    description="Les mer om den storslåtte skipsgraven fra vikingtid" 
+    image="/images/arkeologi/B2978_Myklebustmannen_red.jpg.jpg" 
+    imageAlt="En buddah ligende figur med stort hode og firkantet kropp." 
+    href="https://tohundrefortellinger.w.uib.no/1874/10/04/1874-myklebustskipet/" 
+  />
+   <Card 
     title="Gravritualer i vikingtid" 
     description="Er du nysgjerrig på hvordan &quot;gravritualer&quot; kan ha foregått i Vikingtiden? Da anbefaler vi at du ser denne filmen laget av Archeion" 
     image="/nav-card-images/vintage-fish-illustration.jpg" 
@@ -107,49 +121,27 @@ i vårt museumsdistrikt.
     description="" 
     image="/images/arkeologi/tegning-myklebustmannen.png" 
     imageAlt="" 
-    href="https://riksantikvaren.no/kartlegger-vikingarven-som-mulig-verdensarv/" 
-  />
-  <Card 
-    title="Unimusportalen – Et skattekammer!" 
-    description="..." 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="" 
-    href="https://www.unimus.no/portal/#/things/fa8a886f-d634-442a-9d07-54f508ba8165" 
-  />
-  <Card 
-    title="Topografisk arkiv - Et skattekammer!" 
-    description="..." 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="" 
-    href="/tema/arkeologi/topografisk-arkiv" 
-  />
-  <Card 
-    title="Digitalarkiv - Et skattekammer!" 
-    description="..." 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="" 
-    href="https://www.digitalarkivet.no/ed60219225000001" 
+    href="https://www.uib.no/aktuelt/174101/arkeologens-150-%C3%A5r-gamle-flaskepost-er-%C3%A5pnet" 
   />
   <Card 
     title="Den yngre Jernalders Sværd: et Bidrag til Vikingtidens Historie og Teknologi" 
     description="Les Haakon Sheteligs rapport fra 1902" 
     image="/images/arkeologi/Tema-2021-Figur-1-Fosseringen-G-Hansen-750x615.jpg" 
     imageAlt="" 
-    href="https://urn.digitalarkivet.no/URN:NBN:no-a1450-ed60219225000001.jpg" />
-  
-  
+    href="https://urn.digitalarkivet.no/URN:NBN:no-a1450-ed60219225000001.jpg" 
+    />
   <Card 
     title="Hvem var Andres Lorange?" 
     description="Museets første arkeolog og konservator" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="" 
-    href="/" 
+    image="/images/arkeologi/AndersLorange_red.jpg" 
+    imageAlt="Svart hvitt bilde, mann med skjegg og dress" 
+    href="https://www.unimus.no/arkeologi/lorange/index.html#0" 
   />
   <Card 
     title="Hvem var Haakon Schetelig?" 
     description="Museets første professor i arkeologi." 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="" 
+    image="/images/arkeologi/HaakonShetelig_red.jpg" 
+    imageAlt="Svar hvitt foto av gammel mann med briller" 
     href="/" 
   />
 </Cards>
