--- a/content/tema/glass/index.mdx
+++ b/content/tema/glass/index.mdx
@@ -100,14 +100,14 @@ En helt spesiell kuriositet finner vi i museets bysamling. I 1828 får museet en
     description="Les mer om Octavias Sperati og hennes epergne" 
     image="/images/glass/Octavia_BTM302_red.jpg" 
     imageAlt="Stor fat i glass og sølv" 
-    href="tema/glass/octavia-sperati.mdx" 
+    href="/tema/glass/octavia-sperati"
   />
    <Card 
     title="Statsminister Michelsens dødsbo" 
     description="Deler av dødsboet til tidligere statsminister Michelsen ble testamentert til museet og her finner vi blant annet en glass lampe" 
     image="/images/glass/Lampe_By6524_red.jpg" 
     imageAlt="Lampeskjerm i hvitt glass med blømster malt på" 
-    href="/tema/glass/statsminister-michelsens-doedsbo.mdx" 
+    href="/tema/glass/statsminister-michelsens-doedsbo" 
   />
 </Cards> 
 
