--- a/content/tema/verden-i-bergen/index.mdx
+++ b/content/tema/verden-i-bergen/index.mdx
@@ -67,6 +67,8 @@ kjøpt og hvor mye det kostet. Både protokollen og gjenstandene har vi fortsatt
     imageAlt="Grønn lue, med røde og blå bånd.."
   > 
     Samisk kvinnelue med trehorn (E2292) Foto: Universitetsmuseet i Bergen. 
+  </ImageCarousel.Item>
+  
   <ImageCarousel.Item
     image="/images/verden-i-bergen/Bd1931_brudekrone.jpg" 
     imageAlt="Brudekrone i sølv. Rikt utsmykket"
