fikset en feil i arkeologi

--- a/content/tema/arkeologi/index.mdx
+++ b/content/tema/arkeologi/index.mdx
@@ -77,13 +77,19 @@ i vårt museumsdistrikt.
     image="/images/arkeologi/10682_Gravene på Myklebost Shetelig 1905.jpg" 
     imageAlt="To sider fra boken Haakon Shetelig publiserte om funnen på Myklebust. Viser tegning av sverd, skjoldbuler og øks"
   >
-    I 1905 ga Shetelig ut en publikasjon om funnene på Myklebust (Kilde: Universitetsmuseet i Bergen) 
-  </ImageCarousel.Item>
-  <ImageCarousel.Item 
-    image="/images/arkeologi/Kam.jpg" 
-    imageAlt="En kam i bein."
+     Haakon Shetelig publiserer bok om gravene på Myklebust i 1905 (Kilde: Universitetsmuseet i Bergen)  
+    </ImageCarousel.Item>
+    <ImageCarousel.Item 
+    image="/images/arkeologi/Brevet i flaskeposten.jpg" 
+    imageAlt="En håndskrevet papirlapp funnet i flaskepost fra 1874 "
   >
-    Kam av bein fra vikingtid, funnet i grav på Myklebust (Foto: Adnan Icagic, Universitetsmuseet i Bergen) 
+    I 2024 finner arkeologiene en flaskepost, som ble gravd ned for 150 år siden da Andres Lorange undersøkte gravhaugen i 1874
+  </ImageCarousel.Item>
+ <ImageCarousel.Item 
+    image="/images/arkeologi/Myklebusthaugen_2024.JPG" 
+    imageAlt="Fem mennesker i gule klær står i gravhaugen, med hjelm"
+  >
+    Besøk i felt da arkeologene gjenåpnet Myklebusthaugen i 2024 (Foto: Thomas Bruen Olsen, Universitetsmuseet)
   </ImageCarousel.Item>
 </ImageCarousel>
 
@@ -105,7 +111,7 @@ i vårt museumsdistrikt.
   <Card 
     title="Myklebustskipet" 
     description="Les mer om den storslåtte skipsgraven fra vikingtid" 
-    image="/images/arkeologi/B2978_Myklebustmannen_red.jpg.jpg" 
+    image="/images/arkeologi/B2978_Myklebustmannen_red.jpg" 
     imageAlt="En buddah ligende figur med stort hode og firkantet kropp." 
     href="https://tohundrefortellinger.w.uib.no/1874/10/04/1874-myklebustskipet/" 
   />
@@ -126,7 +132,7 @@ i vårt museumsdistrikt.
   <Card 
     title="Den yngre Jernalders Sværd: et Bidrag til Vikingtidens Historie og Teknologi" 
     description="Les Haakon Sheteligs rapport fra 1902" 
-    image="/images/arkeologi/Tema-2021-Figur-1-Fosseringen-G-Hansen-750x615.jpg" 
+    image="/images/arkeologi/B5764m_Spenne_1902.jpg" 
     imageAlt="" 
     href="https://urn.digitalarkivet.no/URN:NBN:no-a1450-ed60219225000001.jpg" 
     />
