--- a/content/tema/arkeologi/index.mdx
+++ b/content/tema/arkeologi/index.mdx
@@ -109,6 +109,13 @@ i vårt museumsdistrikt.
     href="https://www.uib.no/samlingsforvaltning/113292/topografisk-arkiv" 
   />
   <Card 
+    title="Rapporter fra arkeologiske undersøkelser" 
+    description="Her finner du de fleste rapporter etter arkeologiske undersøkelser. Foto:" 
+    image="/images/arkeologi/Utgravning_red.JPG" 
+    imageAlt="Tre arkeologer står ved gravhaug hvor man har gravd et kakestykke inn i haugen. Det er måleutstyr og en gravemaskin på bildet" 
+    href="https://www.uib.no/fms/89018/rapporter-fra-utgravinger-upubliserte" 
+  />
+  <Card 
     title="Myklebustskipet" 
     description="Les mer om den storslåtte skipsgraven fra vikingtid" 
     image="/images/arkeologi/B2978_Myklebustmannen_red.jpg" 
@@ -118,13 +125,20 @@ i vårt museumsdistrikt.
    <Card 
     title="Gravritualer i vikingtid" 
     description="Er du nysgjerrig på hvordan &quot;gravritualer&quot; kan ha foregått i Vikingtiden? Da anbefaler vi at du ser denne filmen laget av Archeion" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="" 
+    image="/images/arkeologi/Myklebustgraven_red.JPG" 
+    imageAlt="Arkeologene har gravd et hull inn i gravhaugen" 
     href="/tema/arkeologi/det-brente-skipet" 
   />
   <Card 
+    title="Å bevare for evigheten!" 
+    description="Se hvordan museet bevarer sine samlinger " 
+    image="/images/arkeologi/tegning-myklebustmannen.png" 
+    imageAlt="" 
+    href="/tema/arkeologi/topografisk-arkiv" 
+  />
+  <Card 
     title="En hilsen fra 1874" 
-    description="" 
+    description="Her kan du lese mer om den 150 år gamle flaskeposten arkeologene fant i 2024." 
     image="/images/arkeologi/tegning-myklebustmannen.png" 
     imageAlt="" 
     href="https://www.uib.no/aktuelt/174101/arkeologens-150-%C3%A5r-gamle-flaskepost-er-%C3%A5pnet" 
@@ -144,8 +158,8 @@ i vårt museumsdistrikt.
     href="https://www.unimus.no/arkeologi/lorange/index.html#0" 
   />
   <Card 
-    title="Hvem var Haakon Schetelig?" 
-    description="Museets første professor i arkeologi." 
+    title="Hvem var Haakon Shetelig?" 
+    description="Les mer om museets første professor i arkeologi. Foto:" 
     image="/images/arkeologi/HaakonShetelig_red.jpg" 
     imageAlt="Svar hvitt foto av gammel mann med briller" 
     href="/" 
