tester foto og tekst på mennseker som formet museet

--- a/content/menneskene.mdx
+++ b/content/menneskene.mdx
@@ -13,10 +13,10 @@ import {Cards, Card} from '@/components/card'
 
 <Cards>
   <Card 
-    title="Christie"
-    description="Les om Christie" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Portrett av Chrisite" 
+    title="Andres Lorange (1847-188) "
+    description="Museets første konservator og arkeolog" 
+    image="images/Mennesker-museet/AndersLorange_red.jpg" 
+    imageAlt="Portrett av Andres Lorange" 
     href="https://marcus.uib.no"
   />
   <Card 
