--- a/content/tema/bokstaver-og-tegn/index.mdx
+++ b/content/tema/bokstaver-og-tegn/index.mdx
@@ -57,7 +57,6 @@ Den europeiske boktrykkerkunsten ble oppfunnet i første halvdel av 1400-tallet.
     image="/nav-card-images/ubb-ms-1549-06-a-icon.jpg" 
     imageAlt="fragment av håndskrift" href="/tema/bokstaver-og-tegn/fragmenter" 
   />
-public/nav-card-images/
   <Card 
     title="Runepinner fra Bergen" 
     description="Ojda, les mer om det utsvevende språket på runepinnene i &quot;200 Fortellinger&quot;" 
@@ -67,10 +66,11 @@ public/nav-card-images/
   />
   
   <Card 
-    title="SPRÅK" 
-    description="" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Fisk" href="/tema/fisk/christie-og-de-maerkelige-fiske" 
+    title="Spesialutfordringen - Julia Kings reisende middelalderdokument" 
+    description="Hør Julia King fortelle om et fragment i Spesialutfordringen" 
+    image="/nav-card-images/spesialutfordringen-julia-king-icon.jpg" 
+    imageAlt="Stillbilde fra Spesialutfordringen med Julia King" 
+    href="/tema/bokstaver-og-tegn/spesialutfordringen-julia-king" 
   />
 </Cards>
 
