--- a/content/tema/tid-og-rom/index.mdx
+++ b/content/tema/tid-og-rom/index.mdx
@@ -34,12 +34,50 @@ Te cum aeque repudiandae delicatissimi, cu populo dictas ponderum vel, dolor con
 
 <Cards id="historier" title="Historier om tid og rom" className="full pt-10 md:pt-20">
   <Card 
-    title="Christie og de «mærkelige Fiske»" 
+    title="Solur" 
+    description="Tiden fanges i bøker og på kirkevegger" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="Solur" 
+    href="/tema/tid-og-rom/solur" 
+  />
+<Card 
+    title="Mellom sol og måne" 
+    description="Tidevannet i samlingene." 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="Fisk" 
+    href="/tema/tid-og-rom/mellom-sol-og-maane" 
+  />
+  <Card 
+    title="Året som ble kortere" 
     description="Les om Christie og de «mærkelige Fiske» i museet" 
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Fisk" 
-    href="/tema/fisk/christie-og-de-maerkelige-fiske" 
+    href="/tema/tid-og-rom/christie-og-de-maerkelige-fiske" 
   />
+  <Card 
+    title="Almanakken" 
+    description="Les om Christie og de «mærkelige Fiske» i museet" 
+    image="/nav-card-images/vintage-fish-illustration.jpg" 
+    imageAlt="Fisk" 
+    href="/tema/tid-og-rom/christie-og-de-maerkelige-fiske" 
+  />
+ <Card 
+    title="Scholeusstikket" 
+    description="Se videoen som forteller om bergenspanoramaet." 
+    image="/nav-card-images/ubb-librar-f-0017-icon.jpg" 
+    imageAlt="Panorama fra Bergen, trykk." 
+    href="/tema/tid-og-rom/scholeusstikket"
+  />
+  <Card 
+    title="Kart over Bergen fra 1740" 
+    description="Se videoen som forteller om bergenskartet." 
+    image="/nav-card-images/Bf_By_9910_DiBy_156-icon.jpg" 
+    imageAlt="Kart fra Bergen." 
+    href="/tema/tid-og-rom/bergen-1740"
+  />
+
+
+
 </Cards>
 
 </ContentGrid>
