--- a/content/tema/vekster/index.mdx
+++ b/content/tema/vekster/index.mdx
@@ -42,7 +42,6 @@ Herbariesamlingen ved Universitetsmuseet – Herbarium BG med 535 000 objekter
     imageAlt="Akvarell av reinrose" 
     href="/tema/vekster/reinrose-vekster" 
   />
-    
   <Card 
     title="Miranda Bødtker" 
     description="Mangfoldig og fargerik kunstner og illustratør." 
@@ -50,7 +49,6 @@ Herbariesamlingen ved Universitetsmuseet – Herbarium BG med 535 000 objekter
     imageAlt="Portrett av Miranda Bødtker" 
     href="/tema/vekster/miranda-boedtker" 
   />
-
   <Card 
     title="Knut Fægri" 
     description="Banebrytende botaniker og fremragende formidler." 
@@ -61,10 +59,19 @@ Herbariesamlingen ved Universitetsmuseet – Herbarium BG med 535 000 objekter
   <Card 
     title="Bokflora" 
     description="Botaniske spor i bøker og boksamlinger." 
-    image="/nav-card-images/ubb-romertall-oktav-iii-b-6 -sch-01-icon.jpg" 
+    image="/nav-card-images/ubb-romertall-oktav-iii-b-6-sch-01-icon.jpg" 
     imageAlt="Plante i bok" 
     href="/tema/vekster/bokflora" 
   />
+<Card 
+    title="Spesialutfordringen - Dagfinn Moe og den hemmelege hagen" 
+    description="Dagfinn Moe forteller." 
+    image="/nav-card-images/ubb-ms-0811-h-01-1-icon.jpg" 
+    imageAlt="Plante i bok" 
+    href="/tema/vekster/spesialutfordringen-dagfinn-moe" 
+  />
+
+  
 </Cards>
 
 </ContentGrid>
