--- a/content/menneskene.mdx
+++ b/content/menneskene.mdx
@@ -8,17 +8,18 @@ import {Cards, Card} from '@/components/card'
 
 <div className="text-xl text-center pb-20">
   <h1 className="text-5xl text-center">— Menneskene —</h1>
-  Her er en liste over menneskene som har...
+  Menneskene som på ulike vis har formet museets historie
 </div>
 
 <Cards>
   <Card 
-    title="Christie"
-    description="Les om Christie" 
-    image="/nav-card-images/vintage-fish-illustration.jpg" 
-    imageAlt="Portrett av Chrisite" 
-    href="https://marcus.uib.no"
+    title="Olaf Hanssen"
+    description="Energisk innsamler og autodidakt" 
+    image="/nav-card-images/bt-23-10-1933-olaf-hanssen-icon.jpg" 
+    imageAlt="Portrett av Olaf Hanssen" 
+    href="/folk-olaf-hanssen"
   />
+
   <Card 
     title="Christie"
     description="Les om Christie" 
