--- a/content/tema/arkeologi/index.mdx
+++ b/content/tema/arkeologi/index.mdx
@@ -47,25 +47,25 @@ i vårt museumsdistrikt.
     image="/images/arkeologi/ubb-ms-0197-a-Christie antikvarisk notat.jpg" 
     imageAlt="En håndskrevet side. Christie beskriver gravene på Myklebust"
   >
-    W.F.K. Christie skriver om gravene på Myklebust, da han besøkte gården i 1828 (Kilde: MS 197,Universitetsbiblioteket i Bergen)
+    W.F.K. Christie skriver om gravene på Myklebust, da han besøker gården i 1828 (Kilde: MS 197, Universitetsbiblioteket i Bergen)
   </ImageCarousel.Item>
   <ImageCarousel.Item 
     image="/images/arkeologi/B2978_Bronsekjele.jpg" 
     imageAlt="Foto av bronsekjele funnet i en av gravene på Myklebust"
   >
-    Bronsekjelen (B2978) funnet i ved utgravning i 1874 (Foto: Adnan Icagic, Universitetsmuseet i Bergen) 
+    Bronsekjele (B2978) funnet i Myklebusthaugen i 1874 (Foto: Adnan Icagic, Universitetsmuseet i Bergen) 
   </ImageCarousel.Item>
   <ImageCarousel.Item 
     image="/images/arkeologi/tegning-myklebustmannen.png" 
     imageAlt="Tegning av figuren funnet på bronsekjelen. Stort hode og firkantet kropp."
   >
-    Tegning av Myklebustmannen. Det ble funnet 3 slike figurer festet på bronsekjelen. (Kilde: Universitetsmuseet i Bergen) 
+    Tegning av Myklebustmannen. Det ble funnet 3 slike figurer festet på bronsekjelen. (Kilde: Topografisk arkiv, Universitetsmuseet i Bergen) 
   </ImageCarousel.Item>
   <ImageCarousel.Item 
     image="/images/arkeologi/10672b_Tegninger av funn 1902.jpg" 
     imageAlt="Tegninger laget i forbindelse med utgravninger i 1920. Den ene viser gravhaugen i landskapet og den andre detaljert funnkontekst"
   >
-    Tegninger laget fra Shetelig sine utgravninger på Myklebust i 1902 (Eilert Mehl, Universitetsmuseet i Bergen) 
+    Tegninger laget i forbindelse med utgravninger på Myklebust i 1902 (Tegning: Eilert Mehl, Universitetsmuseet i Bergen) 
   </ImageCarousel.Item>
   <ImageCarousel.Item 
     image="/images/arkeologi/B5764q_Perler funnet i grav  av Schetelig i 1902.jpg" 
@@ -77,13 +77,13 @@ i vårt museumsdistrikt.
     image="/images/arkeologi/10682_Gravene på Myklebost Shetelig 1905.jpg" 
     imageAlt="To sider fra boken Haakon Shetelig publiserte om funnen på Myklebust. Viser tegning av sverd, skjoldbuler og øks"
   >
-     Haakon Shetelig publiserer bok om gravene på Myklebust i 1905 (Kilde: Universitetsmuseet i Bergen)  
+     Haakon Shetelig publiserer bok om gravene på Myklebust i 1905 (Kilde: Topografisk arkiv, Universitetsmuseet i Bergen)  
     </ImageCarousel.Item>
     <ImageCarousel.Item 
     image="/images/arkeologi/Brevet i flaskeposten.jpg" 
     imageAlt="En håndskrevet papirlapp funnet i flaskepost fra 1874 "
   >
-    I 2024 finner arkeologiene en flaskepost, som ble gravd ned for 150 år siden da Andres Lorange undersøkte gravhaugen i 1874
+    I 2024 finner arkeologene en flaskepost i Myklebusthaugen. Posten var en 150 år gammel hilsen fra arkeolog Andres Lorange (Foto: Adnan Icagic, Universitetsmuseet i Bergen)
   </ImageCarousel.Item>
  <ImageCarousel.Item 
     image="/images/arkeologi/Myklebusthaugen_2024.JPG" 
@@ -96,73 +96,75 @@ i vårt museumsdistrikt.
 <Cards id="historier" title="Historier om arkeologi" className="full pt-10 md:pt-20">
   <Card 
     title="Unimusportalen – et arkeologisk skattekammer!" 
-    description="På Unimusportalen kan du finne alle de arkeologiske gjenstandene vi har i samlingene" 
+    description="På Unimusportalen kan du finne alle de arkeologiske gjenstandene vi har i samlingene. (Gullgubbe. Foto: Adnan Icagic, Universitetsmuseet i Bergen)" 
     image="/images/arkeologi/B5392_gullgubbe_red.jpg" 
     imageAlt="Liten firkantet brikke i gull med to skikkelser trykt på platen" 
     href="https://www.unimus.no/portal/#/things/fa8a886f-d634-442a-9d07-54f508ba8165" 
   />
   <Card 
     title="Topografisk arkiv!" 
-    description="I dette arkivet finnes all dokumentasjon som hører til museets arkeologiske samling" 
+    description="I dette arkivet finnes all dokumentasjon som hører til museets arkeologiske samling. (Sølvspenne fra Hatteberg. Foto: Ann-Mari Olsen, Universitetsmuseet i Bergen)" 
     image="/images/arkeologi/Hattebergskatten_red.jpg" 
     imageAlt="Stor nål med ring på toppen." 
     href="https://www.uib.no/samlingsforvaltning/113292/topografisk-arkiv" 
   />
   <Card 
     title="Rapporter fra arkeologiske undersøkelser" 
-    description="Her finner du de fleste rapporter etter arkeologiske undersøkelser. Foto:" 
+    description="Her finner du de fleste rapporter etter arkeologiske undersøkelser. (Utgravninger på Myklebust. Foto:Thomas Bruen Olsen, Universitetsmueet i Bergen)" 
     image="/images/arkeologi/Utgravning_red.JPG" 
     imageAlt="Tre arkeologer står ved gravhaug hvor man har gravd et kakestykke inn i haugen. Det er måleutstyr og en gravemaskin på bildet" 
     href="https://www.uib.no/fms/89018/rapporter-fra-utgravinger-upubliserte" 
   />
   <Card 
     title="Myklebustskipet" 
-    description="Les mer om den storslåtte skipsgraven fra vikingtid" 
+    description="Les mer om den storslåtte skipsgraven fra vikingtid. (Myklebustmannen. Foto: Adnan Icagic, Universitetsmuseet i Bergen)" 
     image="/images/arkeologi/B2978_Myklebustmannen_red.jpg" 
     imageAlt="En buddah ligende figur med stort hode og firkantet kropp." 
     href="https://tohundrefortellinger.w.uib.no/1874/10/04/1874-myklebustskipet/" 
   />
    <Card 
     title="Gravritualer i vikingtid" 
-    description="Er du nysgjerrig på hvordan &quot;gravritualer&quot; kan ha foregått i Vikingtiden? Da anbefaler vi at du ser denne filmen laget av Archeion" 
+    description="Er du nysgjerrig på hvordan &quot;gravritualer&quot; kan ha foregått i Vikingtiden? Da anbefaler vi at du ser denne filmen laget av Archeion 
+    (Gravhaugen på Myklebust. Foto: Thomas Bruen Olsen, Universitetsmuseet i Bergen)" 
     image="/images/arkeologi/Myklebustgraven_red.JPG" 
     imageAlt="Arkeologene har gravd et hull inn i gravhaugen" 
     href="/tema/arkeologi/det-brente-skipet" 
   />
   <Card 
     title="Å bevare for evigheten!" 
-    description="Se hvordan museet bevarer sine samlinger " 
-    image="/images/arkeologi/tegning-myklebustmannen.png" 
-    imageAlt="" 
+    description="Hvordan bevarer museet sine samlinger i et evighetsperspektiv? Her kan du se en video som forklarer litt av prosessen.
+    (Funn fra Skipshelleren. Foto: Ann-Mari Olsen, Universitetsmuseet i Bergen) " 
+    image="/images/arkeologi/pilspiss_skipshelleren.jpg" 
+    imageAlt="Foto av flere spydspisser og fiskekroker laget av bein" 
     href="/tema/arkeologi/topografisk-arkiv" 
   />
   <Card 
     title="En hilsen fra 1874" 
-    description="Her kan du lese mer om den 150 år gamle flaskeposten arkeologene fant i 2024." 
-    image="/images/arkeologi/tegning-myklebustmannen.png" 
-    imageAlt="" 
+    description="Her kan du lese mer om den 150 år gamle flaskeposten arkeologene fant i 2024. (Flasken med brev. Foto: Adnan Icagic, Universitetsmuseet i Bergen)" 
+    image="/images/arkeologi/Bf_Myklebust_flaskepost_Anders_Lorange_1874_001.jpg" 
+    imageAlt="En grønn glassflaske med et brev inni" 
     href="https://www.uib.no/aktuelt/174101/arkeologens-150-%C3%A5r-gamle-flaskepost-er-%C3%A5pnet" 
   />
   <Card 
     title="Den yngre Jernalders Sværd: et Bidrag til Vikingtidens Historie og Teknologi" 
-    description="Les Haakon Sheteligs rapport fra 1902" 
+    description="Les Haakon Sheteligs rapport fra 1902. (Spenne (B5764m). Foto: Adnan Icagic, Universitetsmuseet i Bergen) " 
     image="/images/arkeologi/B5764m_Spenne_1902.jpg" 
-    imageAlt="" 
+    imageAlt="En oval spenne i bronse, med ornamentikk" 
     href="https://urn.digitalarkivet.no/URN:NBN:no-a1450-ed60219225000001.jpg" 
     />
   <Card 
     title="Hvem var Andres Lorange?" 
-    description="Museets første arkeolog og konservator" 
+    description="Les mer om museets første arkeolog og konservator. (Foto: Marcus Selmer, Universitetsbiblioteket i Bergen)" 
     image="/images/arkeologi/AndersLorange_red.jpg" 
     imageAlt="Svart hvitt bilde, mann med skjegg og dress" 
     href="https://www.unimus.no/arkeologi/lorange/index.html#0" 
   />
   <Card 
     title="Hvem var Haakon Shetelig?" 
-    description="Les mer om museets første professor i arkeologi. Foto:" 
+    description="Les mer om museets første professor i arkeologi. (Foto:Atelier KK, Universitetsbiblioteket i Bergen)" 
     image="/images/arkeologi/HaakonShetelig_red.jpg" 
     imageAlt="Svar hvitt foto av gammel mann med briller" 
-    href="/" 
+    href="https://snl.no/Haakon_Shetelig" 
   />
 </Cards>
 
