Document Video component

--- a/content/documentation/ui-components.mdx
+++ b/content/documentation/ui-components.mdx
@@ -185,6 +185,23 @@ Using an image from the `public/images` folder, but you can link to an image. Bu
   </Tabs.Tab>
 </Tabs>
 
+## Video
+
+`<Video />` is a component that can be used to display a video. It is built with [React Player](https://github.com/cookpete/react-player).
+
+### Basic usage
+
+<Tabs items={['Preview', 'Code']}>
+  <Tabs.Tab>
+    <Video src="https://vimeo.com/998709932" />
+  </Tabs.Tab>
+  <Tabs.Tab>
+    ```tsx copy
+    <Video src="https://vimeo.com/998709932" />
+    ```
+  </Tabs.Tab>
+</Tabs>
+
 ## Quote
 
 ### Basic usage
