--- a/content/tema/tid-og-rom/bergen-1740.mdx
+++ b/content/tema/tid-og-rom/bergen-1740.mdx
@@ -1,5 +1,5 @@
 ---
-title: Beretninger fra Samlingene - Bergenskartet fra 1740
+title: Godbiter fra Samlingene - Bergenskartet fra 1740
 description: Video om et bergenskart fra 1740.
 keywords: 
   - kart
@@ -8,11 +8,14 @@ keywords:
 ---
 
 <ContentGrid className="mt-10">
-# Beretninger fra Samlingene - Bergenskartet fra 1740
-{/*
-<iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2F303658396335319%2Fvideos%2F1759704970730647%2F&show_text=false&width=560&t=0" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
-*/}
+# Godbiter fra Samlingene - Bergenskartet fra 1740
+
+<Video src="https://youtu.be/dh1xCiaM-sk?si=nDfmYw0S4bXH91Ql" />
+<a href="https://www.youtube.com/playlist?list=PLf8ZIYfAO0qjcPcxRREhodT91kLQqy6pI">Flere videoer fra Godbiter fra Samlingene kan du se her!</a>
 
 <a href="https://www.unimus.no/portal/#/things/4f4590b6-4513-42e7-add8-9cb9dcb88518">Gå til Unimusportalen for å se alle detaljene i kartet!</a>
+
+![Bergenskart 1740](/images/tid-og-rom/Bf_By_9910_DiBy_156.jpg)
+*Kart over Bergen. Fra ca. 1740. Foto: Svein Skare. Universitetsmuseet i Bergen.*
 
 </ContentGrid>
