--- a/content/tema/tid-og-rom/scholeusstikket.mdx
+++ b/content/tema/tid-og-rom/scholeusstikket.mdx
@@ -1,5 +1,5 @@
 ---
-title: Beretninger fra Samlingene - Scholeusstikket
+title: Godbiter fra Samlingene - Scholeusstikket
 description: Video om Scholeusstikket fra Bergen.
 keywords: 
   - kart
@@ -9,10 +9,10 @@ keywords:
 ---
 
 <ContentGrid className="mt-10">
-# Beretninger fra Samlingene - Scholeusstikket
-{/*
-<iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2F303658396335319%2Fvideos%2F745858942559249%2F&show_text=false&width=476&t=0" width="476" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
-*/}
+# Godbiter fra Samlingene - Scholeusstikket
+
+<Video src="https://youtu.be/0jRrIEFPGzc?si=62jPgYstmbcfn-H_" />
+<a href="https://www.youtube.com/playlist?list=PLf8ZIYfAO0qjcPcxRREhodT91kLQqy6pI">Flere videoer fra Godbiter fra Samlingene kan du se her!</a>
 
 ## Se fragmentet i Marcus:
 <Work iiifContent="https://api.ub.uib.no/items/ubb-librar-f-0017?as=iiif">
