--- a/content/tema/bokstaver-og-tegn/spesialutfordringen-julia-king.mdx
+++ b/content/tema/bokstaver-og-tegn/spesialutfordringen-julia-king.mdx
@@ -12,9 +12,8 @@ keywords:
 <ContentGrid className="mt-10">
 # Spesialutfordringen - Julia Kings reisende middelalderdokument
 
-{/*
-<iframe width="560" height="315" src=https://www.youtube.com/embed/lk4wKpODLA0?si=oh_f-RMMswGuIrRQ title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-*/}
+<Video src="https://youtu.be/lk4wKpODLA0?si=IuJrBqK76jZS-EFx" />
+<a href="https://www.youtube.com/playlist?list=PLf8ZIYfAO0qi9KHwsfRRN4nHfP7dJKLl3">Flere videoer fra Spesialutfordringen kan du se her!</a>
 
 ## Se fragmentet i Marcus:
 <Work iiifContent="https://api.ub.uib.no/items/ubb-ms-1550-6?as=iiif">
