--- a/content/tema/vekster/spesialutfordringen-dagfinn-moe.mdx
+++ b/content/tema/vekster/spesialutfordringen-dagfinn-moe.mdx
@@ -12,10 +12,9 @@ keywords:
 <ContentGrid className="mt-10">
 # Spesialutfordringen - Dagfinn Moe og den hemmelege hagen
 
-{/*
-FEIL PÅ VIDEO EMBEDDET FRA YOUTUBE
-<iframe width="560" height="315" src=https://www.youtube.com/embed/nQB-cVF_wNo?si=Ol38u4QUCpGJYHJx title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-*/}
+<Video src="https://youtu.be/nQB-cVF_wNo?si=0TYwa_0e8jsivq9R" />
+<a href="https://www.youtube.com/playlist?list=PLf8ZIYfAO0qi9KHwsfRRN4nHfP7dJKLl3">Flere videoer fra Spesialutfordringen kan du se her!</a>
+
 
 
 ## Se dokumentene i Marcus:
