--- a/content/tema/tid-og-rom/scholeusstikket.mdx
+++ b/content/tema/tid-og-rom/scholeusstikket.mdx
@@ -14,14 +14,14 @@ keywords:
 <Video src="https://youtu.be/0jRrIEFPGzc?si=62jPgYstmbcfn-H_" />
 <a href="https://www.youtube.com/playlist?list=PLf8ZIYfAO0qjcPcxRREhodT91kLQqy6pI">Flere videoer fra Godbiter fra Samlingene kan du se her!</a>
 
-## Se fragmentet i Marcus:
+## Se bildet i Marcus:
 <Work iiifContent="https://api.ub.uib.no/items/ubb-librar-f-0017?as=iiif">
   <Work.Content>
     <Work.Description>
       Scholeusstikket. Universitetsbiblioteket i Bergen.
     </Work.Description>
     <Work.Link href="https://marcus.uib.no/instance/map/ubb-librar-f-0017.html">
-      Bla i boken i Marcus
+      Se bildet i Marcus
     </Work.Link>
   </Work.Content>
 </Work>
