Legg til tekst og foto

--- a/content/tema/glass/index.mdx
+++ b/content/tema/glass/index.mdx
@@ -34,81 +34,81 @@ En helt spesiell kuriositet finner vi i museets bysamling. I 1828 får museet en
     image="/images/glass/By136_flaske.jpg" 
     imageAlt="En glassflaske formet som pistol, i blått glass 36 cm lang"
   > 
-    Glassflasken formet som en pistol. Foto: Stine Dornfest, Universitetsmuseet i Bergen
+    Glassflasken (By136) formet som en pistol. (Foto: Stine Dornfest, Universitetsmuseet i Bergen)
   </ImageCarousel.Item>
 
   <ImageCarousel.Item
     image="/images/glass/Christie sitt notat.png" 
     imageAlt="Et arkiv med håndskriften til Christie, hvor han beskriver glassflasken"
   >
-    W.F.K. Christie sitt notat om glassflasken (Universitetsbiblioteket i Bergen)
+    W.F.K. Christie sitt notat om glassflasken (Kilde: MS187a20, Universitetsbiblioteket i Bergen)
   </ImageCarousel.Item>
 
   <ImageCarousel.Item
     image="/images/glass/ubb-nor-b-0723_xl_Glassmagasin.jpg" 
     imageAlt="Foto av glassmagasinet i Bergen. En kvinne og en mann står i butikken og ser på glass."
   > 
-    Foto fra Glassmagasinet i Bergen. Foto: Norvin reklamefoto 
+    Glassmagasinet i Bergen. (Foto: Norvin reklamefoto, Universitetsbiblioteket i Bergen) 
   </ImageCarousel.Item>
 
   <ImageCarousel.Item
     image="/images/glass/B7237_glassperler.jpg" 
     imageAlt="8 blå glassperler fra vikingtid tredd på en tråd "
   > 
-    Blå glassperler fra Vikingtid (B7234). Foto: Svein Skare, Universitetsmuseet i Bergen 
+    Blå glassperler fra Vikingtid (B7234). (Foto: Svein Skare, Universitetsmuseet i Bergen) 
   </ImageCarousel.Item>
 
   <ImageCarousel.Item
     image="/images/glass/ubb-kk-n-381-012_HotelBristol.jpg" 
     imageAlt="Foto fra Hotel Bristol med pyntet langbord"
   > 
-    Langbord på Hotel Bristol pyntet til fest. Foto: Atelier KK  
+    Langbord på Hotel Bristol pyntet til fest. (Foto: Atelier KK, Universitetsbiblioteket i Bergen)  
   </ImageCarousel.Item>
 
   <ImageCarousel.Item
     image="/images/glass/B2272_glassbeger.jpg" 
     imageAlt="Lysegrønt, gjennomsiktig glassbeger fra Folkevandringstid."
   > 
-    Beger i glass fra Folkevandringstid (B2272) Funnet på Klepp i Rogaland. Foto: Adnan Icagic, Universitetsmuseet i Bergen. 
+    Beger i glass fra Folkevandringstid (B2272) Funnet på Klepp i Rogaland. (Foto: Adnan Icagic, Universitetsmuseet i Bergen). 
   </ImageCarousel.Item>
 
 </ImageCarousel>
 
 <Cards id="historier" title="Historier om glass" className="full pt-10 md:pt-20">
   <Card title="Om Bergens Glasmesterlaug»" 
-    description="Dykk ned i arkivene til Glarmesterlauget (glassmestere) i Bergen" 
+    description="Dykk ned i arkivene til Glarmesterlauget (glassmestere) i Bergen. (Kilde: Glarmesterlauget i Bergen, Universitetsbiblioteket i Bergen)" 
     image="/images/glass/ubb-ms-0167-03-02_p0001_md.jpg" 
     imageAlt="Forsiden på en marmorert protokoll fra 1700-tallet" 
     href="https://marcus.uib.no/topic/667c8a39-4444-49e3-8f51-bcf04f5d0ed5" 
   />
    <Card 
     title="Etnografiske gjenstander i glass" 
-    description="En oversikt over gjenstander i glass i museets etnografiske samling" 
+    description="En oversikt over gjenstander i glass i museets etnografiske samling. (Vannpipe. Foto: Stine Dornfest, Universitetsmuseet i Bergen)" 
     image="/images/glass/E1013_vannpipe_red.jpg" 
     imageAlt="Vannpipe i gjennomsiktig glass, med mønster" 
     href="https://www.unimus.no/portal/#/search/things?freetext=glass&requirePhoto=false&collectionType=Etnografi&museum=UM&limit=100" 
   />
    <Card 
     title="Drikkeglass på Bryggen i Bergen 1300-1700" 
-    description="Utforsk den digitale nettutstillingen om drikkeglass på Bryggen" 
+    description="Utforsk den digitale nettutstillingen om drikkeglass på Bryggen.(Bunn og veggskår i glass, BRM76/026225. Foto: Svein Skare, Universitetsmuseet i Bergen) " 
     image="/images/glass/BRM0_drikkeglass_red.jpg" 
-    imageAlt="Undersiden av et glassbeger, i lyst glass" 
+    imageAlt="Bunn og veggskår av et glassbeger, i lyst glass" 
     href="https://glass.app.uib.no/" 
   />
    <Card 
     title="Octavias epergne!" 
-    description="Les mer om Octavias Sperati og hennes epergne" 
+    description="Les mer om Octavias Sperati og hennes epergne. (Glassepergne. Foto: Stine Dornfest, Universitetsmuseet i Bergen)" 
     image="/images/glass/Octavia_BTM302_red.jpg" 
-    imageAlt="Stor fat i glass og sølv" 
+    imageAlt="Stort fat i flere etasjer i glass og sølv" 
     href="/tema/glass/octavia-sperati"
   />
-   <Card 
+   {/* <Card 
     title="Statsminister Michelsens dødsbo" 
     description="Deler av dødsboet til tidligere statsminister Michelsen ble testamentert til museet og her finner vi blant annet en glass lampe" 
     image="/images/glass/Lampe_By6524_red.jpg" 
     imageAlt="Lampeskjerm i hvitt glass med blømster malt på" 
     href="/tema/glass/statsminister-michelsens-doedsbo" 
-  />
+  /> */}
 </Cards> 
 
 </ContentGrid>
