--- a/content/tema/glass/octavia-sperati.mdx
+++ b/content/tema/glass/octavia-sperati.mdx
@@ -11,7 +11,63 @@ keywords:
  
 # Octavias epergne!
  
-Octavia Sperati var skuespiller, blant annet på Den Nationale Scene. Den 25. oktober 1901 mottok hun dette epergne i gave fra O.B Sundt. Et epergne er et 
-slags serveringsstativ, ofte brukt som et midtpunkt på spisebordet. Gjenstanden ble donert til Teatermuseet, hvor samling i dag er en del av Universitetsmuseet i Bergen.
+Octavia Sperati (1847-1918) var en norsk skuespiller, som tilbrakte det meste at sitt yrkesliv på Den Nationale Scene i Bergen.
+
+Den 25. oktober 1901 mottok hun dette epergne i gave fra O.B Sundt. Et epergne er et slags serveringsstativ, ofte brukt som et midtpunkt på spisebordet. 
+Gjenstanden ble donert til Teatermuseet, hvor samling i dag er en del av Universitetsmuseet i Bergen.
+
+I våre databaser kan finner man flere gjenstander både fra Teatersamlingen og Octavia Sperati!
+
+<ImageCarousel className="feature">
+  <ImageCarousel.Item
+    image="/images/glass/BTM201_Maleri_Octavia_Sperati.jpg" 
+    imageAlt="Maleri av Octavia Sperati med kostyme, sittende på en stol med oransje blomst, vifte og stor hårdpryd"
+  > 
+    Octavia Sperati malt av August Johannessen (Foto: Universitetsmuseet i Bergen)
+  </ImageCarousel.Item>
+
+  <ImageCarousel.Item
+    image="/images/glass/BTM_178_Ovtavia_sko.jpg" 
+    imageAlt="Blå, gul, brune broderte sko med litt hæl"
+  >
+    Disse skoene ble brukt av Sperati i teaterstykke "Den stundesløse" (Foto: Stine Dornfest, Universitetsmuseet i Bergen)
+  </ImageCarousel.Item>
+    </ImageCarousel.Item>
+
+  <ImageCarousel.Item
+    image="/images/glass/BTM7001a_Kostyme_Octavia.jpg" 
+    imageAlt="Gråblå jakke med blomstermønster i gulfarge"
+  >
+    Denne jakken ble brukt av Sperati i teaterstykke "Den stundesløse" (Foto: Stine Dornfest, Universitetsmuseet i Bergen)
+  </ImageCarousel.Item>
+    </ImageCarousel.Item>
+
+  <ImageCarousel.Item
+    image="/images/glass/BTM333_Poesibok_Octavia.jpg" 
+    imageAlt="Svart liten bok i skinn, med Sperati sine inisialer"
+  >
+    Dette er en poesibok som har tilhørt Octavia Sperati (Foto: Stine Dornfest, Universitetsmuseet i Bergen)
+  </ImageCarousel.Item>
+    </ImageCarousel.Item>
+
+  <ImageCarousel.Item
+    image="/images/glass/BTM144_Sminkeboks_Octavia.jpg" 
+    imageAlt="En brun treboks, brukt til oppbevaring av sminke"
+  >
+    Octavia Sperati sin sminkeskrin (BTM144) på teateret (Foto: Stine Dornfest, Universitetsmuseet i Bergen)
+  </ImageCarousel.Item>
+    </ImageCarousel.Item>
+
+  <ImageCarousel.Item
+    image="/images/glass/ubb-mlib-a0003_Octavia_Sperati.jpg" 
+    imageAlt="Svart hvitt foto av kvinne."
+  >
+    Octavia Sperati (Foto: Ukjent, Universitetsbiblioteket i Bergen)
+  </ImageCarousel.Item>
+
+
+ 
+
+</ImageCarousel>
 
 </ContentGrid>
